# SWT_M2

./: Dockerfile  Dockerfile.fleetbroker  README.md
.devcontainer/amd/: devcontainer.json
.devcontainer/intel/: devcontainer.json
src/sopias4_application/: package.xml  setup.cfg  setup.py
src/sopias4_application/config/: nav2.yaml  nav2_base.yaml  nav2_vs.yaml
src/sopias4_application/launch/: bringup_application.launch.py  bringup_system.launch.py  sopias4_application.launch.py
src/sopias4_application/sopias4_application/: controller.py  gui.py  gui.ui  gui_old.py  layer.py  layer_plugin.py  planner.py  planner_plugin.py  schnitzeljagd_race.py  turtlebot_node.py  ui_object.py
src/sopias4_application/ui/: first_attemp.ui  first_final.ui  second.ui  second_final.ui
src/sopias4_fleetbroker/assets/frontend/: gui.ui
src/sopias4_fleetbroker/sopias4_fleetbroker/: gui.py  ui_object.py
src/sopias4_framework/doc/source/: advanced_infos.md  index.rst  installation.md  mapping.md
src/sopias4_framework/sopias4_framework/nodes/: gui_node.py  robot_manager.py
src/sopias4_msgs/: CMakeLists.txt
src/sopias4_msgs/msg/: Robot.msg
src/sopias4_msgs/srv/: DriveWaypointList.srv
